@@ -429,6 +429,7 @@ All (GUI):
 - Added wxDocManager::FindTemplate() (troelsk).
 - Return bool, not void, from wxImage::ConvertAlphaToMask() (troelsk).
 - Fixed resizing columns in wxGrid when they were reordered.
+- Added wxImage::Rotate180() (Jeff Tupper).
 
 MSW:
 
